src/features/products/components/Product/Product.scss
$primary-color: #004080;
$secondary-color: #E85234;

.idb-product-card {
   background: #fff;
   color: #222;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 2px 12px #00000033;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-height: 10rem;
   transition: box-shadow 0.3s, transform 0.3s;
   border: none;

  &:hover {
    box-shadow: 0 6px 24px #00000055;
    transform: translateY(-0.3rem) scale(1.03);
    z-index: 2;
  }

  &__image {
    width: 100%;
    object-fit: cover;
    background: #fff;
    border-bottom: 1px solid gainsboro;
  }

  &__body {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  &__title {
    font-size: 1rem;
    font-weight: 500;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    min-height: 2.2rem;
    max-height: 2.2rem;
  }

  &__description {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: normal;
    font-size: 0.9rem;
    color: #777;
  }

  &__price {
    font-size: 1.1rem;
    font-weight: 700;
    color: $secondary-color;
    margin-bottom: 0;
  }

  &__stock-badge {
    position: absolute;
    bottom: 1px;
    right: 0px;
    top: auto;
    font-size: 0.75rem;
    padding: 4px 12px;
    border-radius: 12px 0px 0px 0px;
    background-color: #cacaca;
    color: #222;
    font-weight: 400;
    box-shadow: none;
    border: none;
    z-index: 1;
  }

  &__ribbon {
    position: absolute;
    top: 0;
    left: 0;
    width: 80px;
    height: 24px;
    background: $secondary-color;
    color: #fff;
    font-size: 0.7rem;
    font-weight: 600;
    text-align: center;
    line-height: 24px;
    transform: rotate(-20deg) translate(-18px, 8px);
    box-shadow: 0 2px 8px #0002;
    z-index: 2;
    pointer-events: none;
    letter-spacing: 0.5px;
  }

  &__price-group {
    display: flex;
    flex-direction: column;
    gap: 2px;
    margin-bottom: 0.5rem;
  }

  &__price-final {
    font-size: 1.25rem;
    font-weight: 700;
    color: $secondary-color;
    margin-bottom: 0;
  }

  &__price-old {
    font-size: 0.95rem;
    color: #777;
    text-decoration: line-through;
    font-weight: 400;
    margin-bottom: 0;
  }

  &__footer {
    margin-top: auto;
    padding-top: 0.5rem;
    display: flex;
    justify-content: center;
  }
}

